# Diffraxia

./: .gitignore  README.md  pyproject.toml
diffraxia/: __init__.py  cli.py  eiger.py  integrate.py
examples/: 01_eiger_to_tiff.md  02_integrate_tiffs.md  03_full_pipeline.sh  sample_paths.txt
